# Action-Agent-BE

./: .gitignore  Action-Agent-BE.sln  Action-LLM-BE.sln  Makefile  README.md  compose.yaml  docker-compose.override.yaml  docker-compose.yaml  logstash.conf  package-lock.json  package.json
ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  conf.yaml  docker-compose.yml  pyproject.toml  ruff.toml  run.py  run_migrations.py  start.sh
ai-service/alembic/: env.py
ai-service/alembic/versions/: 7d7f657b5fcf_initial_migration.py
ai-service/app/: dependencies.py  life_span.py  main.py  plugin.py
ai-service/app/alembic/: env.py
ai-service/app/alembic/versions/: 2746627bbab2_add_team_assistant_links_table.py  b5a572ae1d6f_initial_schema.py  bcec2a934209_update_apikey_table_to_reference_team.py  dbd0d0e19b70_initial_migration.py
ai-service/app/api/: __init__.py  base.py  chatbot.py  deps.py  general.py  gmail_agent.py  main.py  multi_agent.py  rag_bot.py  router.py  search_bot.py  thread.py  user.py
ai-service/app/api/chatV2/: chatV2.py
ai-service/app/api/internal/: user.py
ai-service/app/api/public/: agent.py  agentV2.py  callback.py  connected_app.py  extension.py  history.py  llm.py  mcp.py  mcp_agent.py  multi_agent.py  test.py  thread.py  upload.py  user.py
ai-service/app/api/routes/: agent.py  callback.py  chatbot.py  connected_app.py  extension.py  general.py  gmail_agent.py  history.py  multi_agent.py  rag.py  search.py  test.py  thread.py  upload.py  user.py
ai-service/app/api/v1/: __init__.py  gmail_agent.py  multi_agent.py  rag.py  search.py  thread.py  (+1 more)
ai-service/app/core/: celery_app.py  constants.py  db.py  db_session.py  enums.py  exceptions.py  g4f_chat_model.py  g4f_llm.py  life_span.py  lifespan.py  logging.py  models.py  session.py  settings.py  socketio.py  state.py  stream_control.py  swagger.py
ai-service/app/db/: session.py
ai-service/app/db_models/: __init__.py  agent.py  apikey.py  assistant.py  base_entity.py  checkpoint.py  checkpoint_blobs.py  connected_app.py  connected_extension.py  connected_mcp.py  extension_assistant.py  extension_assistant_link.py  graph.py  mcp_assistant.py  mcp_assistant_link.py  member.py  member_skill_link.py  member_upload_link.py  model.py  model_provider.py  skill.py  subgraph.py  team.py  team_assistant_link.py  thread.py  upload.py  upload_thread_link.py  user.py  user_api_key.py  write.py
ai-service/app/docs/: assistant-api.md  team-stream-api.md
ai-service/app/jobs/: tasks.py
ai-service/app/memory/: __init__.py  checkpoint.py  deps.py
ai-service/app/models/: __init__.py  agent.py  assistant.py  base_entity.py  connected_app.py  connected_extension.py  connected_mcp.py  extension_assistant.py  mcp_assistant.py  message.py  request_models.py  response_model.py  response_models.py  thread.py  thread_file.py  user.py  user_api_key.py
ai-service/app/prompts/: prompt_templates.py
ai-service/app/schemas/: agent.py  assistant.py  base.py  chat.py  chatV2.py  composio_client.py  connected_app.py  connected_extension.py  connected_mcp.py  connection.py  extension.py  extension_assistant.py  history.py  ingest.py  llm.py  mcp_agent.py  mcp_assistant.py  member.py  multi_agent.py  skill.py  statistics.py  suggestion.py  team.py  thread.py  upload.py  user.py  user_api_key.py
ai-service/app/services/: __init__.py  chatbot_service.py  deps.py  gmail_service.py  identity_service.py  llm_service.py  model_service.py  models_service.py  rag_service.py  retrieval_base.py  retrieval_base_service.py  search_service.py  statistics.py
ai-service/app/sockets/: extension_socket.py
ai-service/app/utils/: composio_client.py  constants.py  enums.py  exceptions.py  handling_exceptions.py  ingest.py  ingesting.py  logging.py  messages.py  parsing.py  stream.py  streaming.py  string.py  upload.py  uploading.py
ai-service/docs/: APIs.md  context_management.md  general_assistant_helpers.md  ranking_api_frontend_guide.md
ai-service/docs/examples/: context_management_examples.py  general_assistant_examples.py  socketio_client_chat.ipynb  socketio_client_stream.ipynb
ai-service/har_and_cookies/: .nodriver_is_open
ai-service/migrations/: 000001_create_extensions_and_first_tables.down.sql  000001_create_extensions_and_first_tables.up.sql  000001_users_threads_apps.down.sql  000001_users_threads_apps.up.sql  000002_user_api_keys.up.sql  000003_delete_redundant_indices.up.sql  000004_mcps.up.sql  000004_threadfile_message.up.sql
(+700 files in other folders)
