[tool.poetry]
package-mode = false
name = "ai-service"
version = "0.1.0"
description = "The AI Service for the Action-Executing AI Agent"
authors = ["Team HCMUS"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.18"
langgraph = "^0.2.53"
fastapi = "^0.115.5"
langchain-openai = "^0.3.4"
langchain-core = "^0.3.34"
python-dotenv = "^1.0.1"
langgraph-checkpoint-postgres = "^2.0.3"
psycopg-binary = "^3.2.3"
langchain-postgres = "^0.0.13"
beautifulsoup4 = "^4.12.3"
python-multipart = "^0.0.20"
wikipedia = "^1.4.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
langchain-google-community = "^2.0.3"
google-api-python-client = "^2.154.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
sse-starlette = "^2.1.3"
composio = "^0.1.1"
composio-langgraph = "^0.7.1"
composio-langchain = "^0.7.1"
unstructured-client = "^0.29.0"
langchain-unstructured = "^0.1.6"
langchain-community = "^0.3.17"
pillow = "^11.1.0"
pymupdf = "^1.25.3"
unstructured = { extras = ["local-inference"], version = "^0.16.20" }
structlog = "^25.1.0"
elasticsearch = "^8.17.1"
pydantic-settings = "^2.7.1"
uvicorn = { version = "0.34.0", extras = ["standard"] }


[tool.poetry.group.dev.dependencies]


[tool.poetry.group.lint.dependencies]
codespell = "^2.3.0"
ruff = "^0.9.6"


[tool.poetry.group.test.dependencies]
hypothesis = "^6.119.4"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
tox = "^4.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
