[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "The AI Service for the Action-Executing AI Agent"
authors = ["Team HCMUS"]
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
langchain = "^0.3.18"
langchain-core = "^0.3.34"
langchain-openai = "^0.3.4"
langgraph = "^0.2.53"
python-dotenv = "^1.0.1"
langgraph-checkpoint-postgres = "^2.0.3"
psycopg-binary = "^3.2.3"
langchain-postgres = "^0.0.13"
beautifulsoup4 = "^4.12.3"
python-multipart = "^0.0.20"
wikipedia = "^1.4.0"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
langchain-google-community = "^2.0.3"
google-api-python-client = "^2.154.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
sse-starlette = "^2.1.3"
composio = "^0.1.1"
composio-langgraph = "^0.7.1"
composio-langchain = "^0.7.1"
unstructured-client = "^0.29.0"
langchain-unstructured = "^0.1.6"
langchain-community = "^0.3.17"
pillow = "^11.1.0"
pymupdf = "^1.25.3"
unstructured = { extras = ["local-inference"], version = "^0.16.20" }
structlog = "^25.1.0"
elasticsearch = "^8.17.1"
pydantic-settings = "^2.7.1"


[tool.poetry.group.lint.dependencies]
codespell = "^2.3.0"
ruff = "^0.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
