[project]
name = "ai-service"
version = "0.1.0"
description = "The AI Service for the Action-Executing AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "celery>=5.5.3",
    "composio>=0.1.1",
    "composio-langchain>=0.7.4",
    "composio-langgraph>=0.7.4",
    "crewai>=0.120.1",
    "dateparser>=1.2.1",
    "docker>=7.1.0",
    "duckduckgo-search>=8.0.2",
    "fastapi[standard]>=0.115.8",
    "google-auth-oauthlib>=1.2.1",
    "langchain>=0.3.19",
    "langchain-google-community>=2.0.4",
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters>=0.1.3",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.6",
    "langchain-postgres>=0.0.13",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.2.74",
    "langgraph-checkpoint-postgres>=2.0.15",
    "numexpr>=2.10.2",
    "passlib>=1.7.4",
    "pillow>=11.1.0",
    "psycopg-binary>=3.2.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "pymupdf>=1.25.3",
    "python-multipart>=0.0.20",
    "python-socketio>=5.12.1",
    "pytz>=2025.1",
    "sse-starlette>=2.2.1",
    "structlog>=25.1.0",
    "unstructured>=0.16.23",
    "wikipedia>=1.4.0",
    "zhipuai>=2.1.5.20250526",
]

[dependency-groups]
lint = [
    "ruff>=0.9.7",
]
